Added role management in authentication and granted according current rules in security config class